<?xml version="1.0" encoding="utf-8"?>
    -<LinearLayout tools:context=".OrdineActivity"
    android:padding="24dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    -<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent">


    -<LinearLayout
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/txt_staiordinando"
        android:id="@+id/textview_titolo"/>


    -<LinearLayout android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="15dp">

    <TextView android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:textColor="#373737"
        android:text="@string/txt_numero"
        android:id="@+id/textView5"
        android:gravity="center_vertical"
        android:layout_weight="1"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/edittext_people"
        android:layout_weight="1"
        android:inputType="number"
        android:hint="@string/txt_add_number"
        android:ems="10"/>

</LinearLayout>

    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:text="@string/btn_calcola_ingredienti"
        android:id="@+id/btn_calcolo"
        android:layout_marginTop="20dp"
        android:onClick="calculateIngredients"
        android:background="@color/colorButton"/>

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/txt_consegna"
        android:id="@+id/textView7"
        android:layout_marginTop="15dp"/>

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:textColor="#373737"
        android:text="@string/txt_no_text"
        android:id="@+id/textview_risultato"
        android:layout_marginTop="10dp"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/btn_continua"
        android:id="@+id/btn_continua"
        android:layout_marginTop="20dp"
        android:onClick="openFinishActivity"
        android:background="@color/colorButton"
        android:clickable="false"/>

</LinearLayout>

</ScrollView>

</LinearLayout>