<?xml version="1.0" encoding="utf-8"?>
    -<LinearLayout tools:context=".FinaleActivity"
    android:padding="24dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/doveconsegnare"
        android:id="@+id/textView3"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/btn_trova_indirizzo"
        android:id="@+id/btn_indirizzo"
        android:onClick="findShippingAddress"
        android:background="@color/colorButton"
        android:layout_marginTop="20dp"/>

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:textColor="#373737"
        android:text="@string/txt_indirizzo"
        android:id="@+id/textview_indirizzo"
        android:layout_marginTop="15dp"/>


    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/btn_acquista"
        android:id="@+id/button2"
        android:onClick="buy"
        android:background="@color/colorButton"
        android:layout_marginTop="24dp"/>

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:id="@+id/textViewAcquista"
        android:layout_marginTop="15dp"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/btn_annulla"
        android:id="@+id/button3"
        android:onClick="cancel"
        android:background="@color/colorButton"
        android:layout_marginTop="24dp"/>

</LinearLayout>