<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
tools:context=".MapActivity"
android:layout_height="match_parent"
android:layout_width="match_parent"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android">

<fragment android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_constraintVertical_bias="0.0"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:id="@+id/recipemap"/>

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:id="@+id/floatingActionButton"
    app:backgroundTint="#EAEAEA"
    android:src="@drawable/icon_gps"
    android:onClick="findUserAddress"
    android:focusable="true"
    android:contentDescription="@string/app_name"
    android:clickable="true"
    android:layout_marginBottom="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginLeft="24dp" />

<Button android:layout_height="wrap_content"
    android:layout_width="0dp"
    app:layout_constraintTop_toTopOf="@+id/recipemap"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:id="@+id/button"
    android:onClick="calculateCO2Emissions"
    android:layout_marginStart="24dp"
    android:textColor="#000000"
    android:text="@string/btn_impatto"
    android:elevation="3dp"
    android:background="#73D877"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="24dp"/>

<TextView android:layout_height="50dp"
    android:layout_width="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:id="@+id/textview_co2"
    android:layout_marginStart="24dp"
    android:textColor="#2C2C2C"
    android:text="@string/txt_co2"
    android:background="#FFFFFF"
    android:layout_marginEnd="24dp"
    app:layout_constraintTop_toBottomOf="@+id/button"
    android:visibility="gone"
    android:textSize="18sp"
    android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>